// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fill list assets component should link ERC-20 asset 1`] = `
<div>
  <div
    class="fill-list-assets___StyledDiv-sc-1v0cnrp-0 kdfTGP"
  >
    <div
      class="fill-list-assets___StyledDiv2-sc-1v0cnrp-1 glZnuA"
    >
      <svg
        _css2="hsl(235, 14%, 30%)"
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-assets-image___StyledTokenIcon-sc-1na7yca-2 czOLpO"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
        />
      </svg>
    </div>
    <span>
      150
       
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-list-assets___StyledTokenLink-sc-1v0cnrp-2 hnXuNH"
        href="/tokens/0x12345"
      >
        WETH
      </a>
    </span>
  </div>
</div>
`;

exports[`fill list assets component should link ERC-721 asset 1`] = `
<div>
  <div
    class="fill-list-assets___StyledDiv-sc-1v0cnrp-0 kdfTGP"
  >
    <div
      class="fill-list-assets___StyledDiv2-sc-1v0cnrp-1 glZnuA"
    >
      <svg
        _css2="hsl(235, 14%, 30%)"
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-assets-image___StyledTokenIcon-sc-1na7yca-2 czOLpO"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
        />
      </svg>
    </div>
    <span>
      1
       
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-list-assets___StyledTokenLink-sc-1v0cnrp-2 hnXuNH"
        href="/tokens/0x12345"
      >
        CK
      </a>
    </span>
  </div>
</div>
`;

exports[`fill list assets component should render for ERC-20 asset 1`] = `
<div>
  <div
    class="fill-list-assets___StyledDiv-sc-1v0cnrp-0 kdfTGP"
  >
    <div
      class="fill-list-assets___StyledDiv2-sc-1v0cnrp-1 glZnuA"
    >
      <svg
        _css2="hsl(235, 14%, 30%)"
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-assets-image___StyledTokenIcon-sc-1na7yca-2 czOLpO"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
        />
      </svg>
    </div>
    <span>
      150
       
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-list-assets___StyledTokenLink-sc-1v0cnrp-2 hnXuNH"
        href="/tokens/0x12345"
      >
        WETH
      </a>
    </span>
  </div>
</div>
`;

exports[`fill list assets component should render for ERC-721 asset 1`] = `
<div>
  <div
    class="fill-list-assets___StyledDiv-sc-1v0cnrp-0 kdfTGP"
  >
    <div
      class="fill-list-assets___StyledDiv2-sc-1v0cnrp-1 glZnuA"
    >
      <svg
        _css2="hsl(235, 14%, 30%)"
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-assets-image___StyledTokenIcon-sc-1na7yca-2 czOLpO"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
        />
      </svg>
    </div>
    <span>
      1
       
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-list-assets___StyledTokenLink-sc-1v0cnrp-2 hnXuNH"
        href="/tokens/0x12345"
      >
        CK
      </a>
    </span>
  </div>
</div>
`;

exports[`fill list assets component should render for multiple assets 1`] = `
<div
  class="fill-list-assets___StyledDiv-sc-1v0cnrp-0 kdfTGP"
>
  <div
    class="fill-list-assets___StyledDiv2-sc-1v0cnrp-1 glZnuA"
  >
    <svg
      _css="hsl(235, 14%, 30%)"
      aria-hidden="true"
      class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-assets-image___StyledTokensIcon-sc-1na7yca-1 Byjuu"
      fill="currentColor"
      focusable="false"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M14 2a8 8 0 013.292 15.293A8 8 0 116.706 6.707 8.003 8.003 0 0114 2zm-3 7H9v1a2.5 2.5 0 00-.164 4.995L9 15h2l.09.008a.5.5 0 010 .984L11 16H7v2h2v1h2v-1a2.5 2.5 0 00.164-4.995L11 13H9l-.09-.008a.5.5 0 010-.984L9 12h4v-2h-2V9zm3-5a5.985 5.985 0 00-4.484 2.013 8 8 0 018.47 8.471A6 6 0 0014 4z"
      />
    </svg>
  </div>
  <span>
    Multiple Assets
  </span>
</div>
`;
